# CogniTrainer

./: .gitignore  AppHeader.qml  CMakeLists.txt  Main.qml  SettingsPage.qml  TestsPage.qml  TrainingPage.qml  main.cpp
core/: BaseModule.h  Category.h  CategoryManager.cpp  CategoryManager.h  ModuleLoader.cpp  ModuleLoader.h
interfaces/: ModuleInterface.h
plugins/ReactionTrainer/: CMakeLists.txt  ReactionTrainer.cpp  ReactionTrainer.h  ReactionTrainer.qml  ReactionTrainer.qrc  ReactionTrainer_global.h
qml/components/: CategoryItem.qml  TrainingCardItem.qml
